--- a/springboot2/src/main/resources/application.properties
+++ b/springboot2/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=springboot2
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
